[package]
name = "bootloader-locator"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
description = "Retrieves the file system location of a `bootloader` dependency"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.11.1"
locate-cargo-manifest = "0.2.0"
thiserror = "1.0.20"
toml = "0.5.6"
