[package]
name = "bootloader-locator"
version = "0.0.4"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"
description = "Retrieves the file system location of a `bootloader` dependency"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
